--- a/ansible/roles/post-install-vm/tasks/main.yaml
+++ b/ansible/roles/post-install-vm/tasks/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install qemu guest agent
-  ansible.builtin.yum:
+  ansible.builtin.apt:
         name: qemu-guest-agent
         state: present
 
