--- a/kubernetes/argocd/instance.yaml
+++ b/kubernetes/argocd/instance.yaml
@@ -54,13 +54,13 @@ spec:
     ingress:
       enabled: false
     insecure: true
-  sso:
-    dex:
-      resources:
-        limits:
-          cpu: 500m
-          memory: 256Mi
-        requests:
-          cpu: 250m
-          memory: 128Mi
-    provider: dex
+#  sso:
+#    dex:
+#      resources:
+#        limits:
+#          cpu: 500m
+#          memory: 256Mi
+#        requests:
+#          cpu: 250m
+#          memory: 128Mi
+#    provider: dex
