Update repoURL format in nfs-provisioner app.yaml for consistency

--- a/argocd/apps/nfs-provisioner/app.yaml
+++ b/argocd/apps/nfs-provisioner/app.yaml
@@ -13,7 +13,7 @@ spec:
         valuesFiles:
           - $values/argocd/files/nfs/values.yaml
         releaseName: nfs-subdir-external-provisioner
-    - repoURL: https://git.server.dortlii.dev/intra/homelab-files.git
+    - repoURL: git@git.server.dortlii.dev:intra/homelab-files.git
       targetRevision: main
       ref: values
   destination:
