Add ignoreDifferences configuration for Service status in traefik app.yaml

--- a/argocd/apps/traefik/app.yaml
+++ b/argocd/apps/traefik/app.yaml
@@ -27,3 +27,8 @@ spec:
         argocd.argoproj.io/managed-by: argocd
     syncOptions:
       - CreateNamespace=true
+  ignoreDifferences:
+    - group: ""
+      kind: Service
+      jsonPointers:
+        - /status
