--- a/argocd/apps/traefik/app.yaml
+++ b/argocd/apps/traefik/app.yaml
@@ -15,6 +15,10 @@ spec:
         persistence:
           enabled: true
           size: 1Gi
+        providers:
+          kubernetesIngress:
+            publishedService:
+              enabled: true
   destination:
     server: "https://kubernetes.default.svc"
     namespace: traefik
