--- a/argocd/apps/metallb/app.yaml
+++ b/argocd/apps/metallb/app.yaml
@@ -5,10 +5,20 @@ metadata:
   namespace: argocd
 spec:
   project: metallb
-  source:
-    repoURL: git@github.com:dortlii/homelab.git
-    path: homelab-files/argocd/files/metallb
-    targetRevision: main
+  sources:
+    - repoURL: https://metallb.github.io/metallb
+      chart: metallb
+      targetRevision: 0.14.9
+      helm:
+        releaseName: metallb
+        valuesObject:
+          labels:
+            pod-security.kubernetes.io/enforce: privileged
+            pod-security.kubernetes.io/audit: privileged
+            pod-security.kubernetes.io/warn: privileged
+    - repoURL: git@github.com:dortlii/homelab.git
+      path: homelab-files/argocd/files/metallb
+      targetRevision: main
   destination:
     server: "https://kubernetes.default.svc"
     namespace: metallb-system
