--- a/argocd/apps/metallb/app.yaml
+++ b/argocd/apps/metallb/app.yaml
@@ -12,6 +12,9 @@ spec:
       helm:
         releaseName: metallb
         valuesObject:
+          speaker:
+            frr:
+              enabled: true
           labels:
             pod-security.kubernetes.io/enforce: privileged
             pod-security.kubernetes.io/audit: privileged
