--- a/argocd/apps/traefik/app.yaml
+++ b/argocd/apps/traefik/app.yaml
@@ -12,12 +12,30 @@ spec:
     helm:
       releaseName: traefik
       valuesObject:
-        persistence:
-          enabled: true
-          size: 1Gi
+        deployment:
+          kind: DaemonSet  # Run Traefik on every node for high availability
+        service:
+          spec:
+            type: LoadBalancer
+            externalTrafficPolicy: Local
+        ports:
+          web:
+            redirectTo:
+              port: websecure  # Redirect HTTP to HTTPS
+          websecure:
+            tls:
+              enabled: true
         ingressRoute:
           dashboard:
             enabled: true
+        providers:
+          kubernetesIngress:
+            publishedService:
+              enabled: true
+        persistence:
+          enabled: true
+          size: 1Gi
+          accessMode: ReadWriteOnce
   destination:
     server: "https://kubernetes.default.svc"
     namespace: traefik
