--- a/argocd/apps/traefik/app.yaml
+++ b/argocd/apps/traefik/app.yaml
@@ -5,28 +5,55 @@ metadata:
   namespace: argocd
 spec:
   project: traefik
-  source:
-    chart: traefik
-    repoURL: https://traefik.github.io/charts
-    targetRevision: 35.2.0
-    helm:
-      releaseName: traefik
-      valuesObject:
-        deployment:
-          kind: DaemonSet  # Run Traefik on every node for high availability
-        service:
-          spec:
-            type: LoadBalancer
-            externalTrafficPolicy: Local
-        ports:
-          web: null
-          websecure:
-            tls:
-              enabled: true
-        persistence:
-          enabled: true
-          size: 1Gi
-          accessMode: ReadWriteOnce
+  sources:
+    - chart: traefik
+      repoURL: https://traefik.github.io/charts
+      targetRevision: 35.2.0
+      helm:
+        releaseName: traefik
+        valuesObject:
+          deployment:
+            kind: DaemonSet  # Run Traefik on every node for high availability
+          service:
+            spec:
+              type: LoadBalancer
+              externalTrafficPolicy: Local
+          ports:
+            web: null
+            websecure:
+              tls:
+                enabled: true
+          persistence:
+            enabled: true
+            size: 1Gi
+            accessMode: ReadWriteOnce
+    - repoURL: 'https://git.server.dortlii.dev/api/v4/projects/6/packages/helm/stable'
+      targetRevision: 0.0.4
+      chart: traefik-ingress
+      helm:
+        releaseName: traefik-ingress
+        valuesObject:
+          global:
+            namespace: traefik
+          cert:
+            enabled: true
+            name: traefik-cert
+            secretName: traefik-tls-secret
+            dnsNames: vw.dortlii.dev
+          issuerRef:
+            name: acme-issuer
+            kind: ClusterIssuer
+          ingress:
+            enabled: true
+            name: traefik-ingress
+            path: /
+            pathType: Prefix
+            backend:
+              port: 80
+              service: traefik
+            serversTransports:
+              ignorecert:
+                insecureSkipVerify: false
   destination:
     server: "https://kubernetes.default.svc"
     namespace: traefik
