Set log level to debug

--- a/argocd/apps/traefik/app.yaml
+++ b/argocd/apps/traefik/app.yaml
@@ -26,6 +26,9 @@ spec:
             websecure:
               tls:
                 enabled: true
+          logs:
+            general:
+              level: DEBUG
           persistence:
             enabled: true
             size: 1Gi
