Set log level to info

--- a/argocd/apps/traefik/app.yaml
+++ b/argocd/apps/traefik/app.yaml
@@ -28,7 +28,7 @@ spec:
                 enabled: true
           logs:
             general:
-              level: DEBUG
+              level: INFO
           persistence:
             enabled: true
             size: 1Gi
