--- a/argocd/apps/argocd-ingress/app.yaml
+++ b/argocd/apps/argocd-ingress/app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-ingress
   namespace: argocd
 spec:
-  project: argocd-ingress
+  project: default
   sources:
     - repoURL: 'https://git.server.dortlii.dev/api/v4/projects/6/packages/helm/stable'
       targetRevision: 0.0.4
