--- a/argocd/apps/argocd-ingress/app.yaml
+++ b/argocd/apps/argocd-ingress/app.yaml
@@ -8,7 +8,7 @@ spec:
   sources:
     - repoURL: 'https://git.server.dortlii.dev/api/v4/projects/6/packages/helm/stable'
       targetRevision: 0.0.4
-      chart: argocd-ingress
+      chart: traefik-ingress
       helm:
         releaseName: argocd-ingress
         valuesObject:
