--- a/argocd/apps/vaultwarden/app.yaml
+++ b/argocd/apps/vaultwarden/app.yaml
@@ -25,8 +25,19 @@ spec:
             requests:
               cpu: 50m
               memory: 256Mi
+          storage:
+            data:
+              name: "vaultwarden-data"
+              size: "20Gi"
+              class: "nfs"
+              path: "/data"
+            attachments:
+              name: "vaultwarden-files"
+              size: "30Gi"
+              class: "nfs"
+              path: "/files"
         releaseName: vaultwarden
-    - repoURL: 'https://git.server.dortlii.dev/api/v4/projects/6/packages/helm/stable'
+    - repoURL: "https://git.server.dortlii.dev/api/v4/projects/6/packages/helm/stable"
       targetRevision: 0.0.4
       chart: traefik-ingress
       helm:
