--- a/argocd/apps/vaultwarden/app.yaml
+++ b/argocd/apps/vaultwarden/app.yaml
@@ -31,11 +31,13 @@ spec:
               size: "20Gi"
               class: "nfs"
               path: "/data"
+              accessMode: "ReadWriteOnce"
             attachments:
               name: "vaultwarden-files"
               size: "30Gi"
               class: "nfs"
               path: "/files"
+              accessMode: "ReadWriteOnce"
         releaseName: vaultwarden
     - repoURL: "https://git.server.dortlii.dev/api/v4/projects/6/packages/helm/stable"
       targetRevision: 0.0.4
